--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -51,11 +51,9 @@
                 {% endif %}
             {% endfor %}
         </div>
-    </div>
-    <br />
-    <br />
-    <div class="text-center">
-        <a href="../index.php?page=contact"><button class="btn btn-primary partnair-btn">Devenez Partenaire</button></a>
-    </div>
+        <hr class="hr">
+        <div class="text-center">
+            <a href="../../../../index.php?page=contact"><button class="btn btn-primary partnair-btn">Devenez Partenaire</button></a>
+        </div>
     </div>
 {% endblock %}
