--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -10,7 +10,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <div class="thumbnail thumbnail-div">
                             <a href="{{ place.url }}">
-                                <img src="/web/img/place/{{ place.imgPlace }}" class="">
+                                <img src="/web/img/place/{{ place.imgPlace }}" class="img-responsive">
                                 <h3 class="thumbnail-title font-circula">{{ place.name }}</h3>
                             </a>
                         </div>
@@ -18,8 +18,6 @@
                 {% endif %}
             {% endfor %}
         </div>
-        <br />
-        <br />
         <div class="row">
             <hr class="hr-min">
             <h2 class="white font-circula">Showcases</h2>
@@ -28,7 +26,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <div class="thumbnail thumbnail-div">
                             <a href="{{ place.url }}">
-                                <img src="../../../web/img/place/{{ place.imgPlace }}">
+                                <img src="../../../web/img/place/{{ place.imgPlace }}" class="img-responsive">
                                 <h3 class="thumbnail-title font-circula">{{ place.name }}</h3>
                             </a>
                         </div>
@@ -39,7 +37,6 @@
         <div class="row">
             <div class="col-xs-12">
                 <hr class="hr">
-                <br />
                 <iframe width="100%" height="750px" frameBorder="0" src="https://umap.openstreetmap.fr/fr/map/hop-pop-hop-lieux_136503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&allowEdit=false&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=false&onLoadPanel=undefined&captionBar=false&fullscreenControl=false&locateControl=false&measureControl=false&editinosmControl=false#16/47.9032/1.9073" class="hidden-xs"></iframe>
                 <iframe width="100%" height="250px" frameBorder="0" src="https://umap.openstreetmap.fr/fr/map/hop-pop-hop-lieux_136503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&allowEdit=false&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=false&onLoadPanel=undefined&captionBar=false&fullscreenControl=false&locateControl=false&measureControl=false&editinosmControl=false#16/47.9032/1.9073" class="visible-xs"></iframe>
             </div>
