--- a/src/Hph/View/front/contact.html.twig
+++ b/src/Hph/View/front/contact.html.twig
@@ -6,9 +6,13 @@
         <div class="col-md-offset-3 col-md-6">
             <div class="form-area">
                 {% if msg == 1 %}
-                    <p class="white text-center">Message envoyé avec succès</p>
+                    <div class="alert alert-success" role="alert">
+                        <p>Votre message a été envoyé avec succès. Nous vous répondrons dans les plus bref délais.</p>
+                    </div>
                 {% elseif msg == 0 %}
-                    <p class="white text-center">Une erreur a eu lieu lors de l'envoi de votre message</p>
+                    <div class="alert alert-danger" role="alert">
+                        <p>Une erreur a eu lieu lors de l'envoi de votre message</p>
+                    </div>
                 {% endif %}
                 <form method="POST" action="../../../../index.php?page=mail">
                     <h1 class="orange font-circula text-center">Nous contacter</h1>
