--- a/src/Hph/View/back/concert.html.twig
+++ b/src/Hph/View/back/concert.html.twig
@@ -2,60 +2,67 @@
 {% block title %}Concert{% endblock %}
 {% block content %}
     <div class="container">
-        <h2 class="text-center">Ajouter un concert</h2>
-        <hr/>
         {% if error==0 %}
             <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
         {% elseif error==7 %}
             <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
         {% endif %}
-        <form method="POST" action="../../../../admin/admin.php?page=addConcert" enctype="multipart/form-data">
+        <div class="text-center">
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#form" aria-expanded="false">Ajouter un concert</button>
+        </div>
+        <br />
+        <div class="collapse" id="form">
+            <div class="well">
+                <h2 class="text-center">Ajouter un concert</h2>
+                <hr/>
+                <form method="POST" action="../../../../admin/admin.php?page=addConcert" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label for="start">Heure d'ouverture du concert</label>
+                        <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="start">Heure de fermeture du concert</label>
+                        <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="place">Artistes du concert</label>
+                        <select  class="form-control" id="artist" name="artist" required>
+                            {% for artist in artists %}
+                                <option value="{{ artist.id }}">{{ artist.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="place">Lieu du concert</label>
+                        <select  class="form-control" id="place" name="place" required>
+                            {% for place in places %}
+                                <option value="{{ place.id }}">{{ place.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <p><strong>Statut du concert</strong></p>
+                        <label for="status-0">Programmé</label>
+                        <input type="radio" name="status" value="programmed" id="status-0" checked>
+                        <label for="status-1">Déprogrammé</label>
+                        <input type="radio" name="status" value="canceled" id="status-1">
+                        <label for="status-2">Supprimé</label>
+                        <input type="radio" name="status" value="deleted" id="status-2">
+                    </div>
+                    <div class="form-group">
+                        <p><strong>Showcase</strong></p>
+                        <label for="showcase-0">Oui</label>
+                        <input type="radio" name="showcase" value="1" id="showcase-0">
+                        <label for="showcase-1">Non</label>
+                        <input type="radio" name="showcase" value="0" id="showcase-1" checked><br>
+                    </div>
 
-            <div class="form-group">
-                <label for="start">Heure d'ouverture du concert</label>
-                <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" required>
+                    <div class="text-center">
+                        <input type="submit" name="submit" class="btn btn-primary" value="Créer">
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="start">Heure de fermeture du concert</label>
-                <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" required>
-            </div>
-            <div class="form-group">
-                <label for="place">Artistes du concert</label>
-                <select  class="form-control" id="artist" name="artist" required>
-                    {% for artist in artists %}
-                        <option value="{{ artist.id }}">{{ artist.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="place">Lieu du concert</label>
-                <select  class="form-control" id="place" name="place" required>
-                    {% for place in places %}
-                        <option value="{{ place.id }}">{{ place.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="form-group">
-                <p><strong>Statut du concert</strong></p>
-                <label for="status-0">Programmé</label>
-                <input type="radio" name="status" value="programmed" id="status-0" checked>
-                <label for="status-1">Déprogrammé</label>
-                <input type="radio" name="status" value="canceled" id="status-1">
-                <label for="status-2">Supprimé</label>
-                <input type="radio" name="status" value="deleted" id="status-2">
-            </div>
-            <div class="form-group">
-                <p><strong>Showcase</strong></p>
-                <label for="showcase-0">Oui</label>
-                <input type="radio" name="showcase" value="1" id="showcase-0">
-                <label for="showcase-1">Non</label>
-                <input type="radio" name="showcase" value="0" id="showcase-1" checked><br>
-            </div>
-
-            <div class="text-center">
-                <input type="submit" name="submit" class="btn btn-primary" value="Créer">
-            </div>
-        </form>
+        </div>
         <br/>
         <h2 class="text-center">Liste des concerts</h2>
         <hr/>
