--- a/src/Hph/View/back/food.html.twig
+++ b/src/Hph/View/back/food.html.twig
@@ -2,8 +2,6 @@
 {% block title %}Foodtruck{% endblock %}
 {% block content %}
     <div class="container">
-        <h2 class="text-center">Ajouter un foodtruck</h2>
-        <hr/>
         {% if error==2 %}
             <div class="alert alert-danger" role="alert">Le nom ou la description d'un foodtruck doit être une chaîne de caractères</div>
         {% elseif error==3 %}
@@ -29,40 +27,50 @@
         {% elseif error==7 %}
             <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
         {% endif %}
-        <form method="POST" action="../../../../admin/admin.php?page=addFood" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="title">Nom du foodtruck</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom du Foodtruck" required>
+        <div class="text-center">
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#form" aria-expanded="false">Ajouter un foodtruck</button>
+        </div>
+        <br />
+        <div class="collapse" id="form">
+            <div class="well">
+                <h2 class="text-center">Ajouter un foodtruck</h2>
+                <hr/>
+                <form method="POST" action="../../../../admin/admin.php?page=addFood" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label for="title">Nom du foodtruck</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom du Foodtruck" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="text">Description du foodtruck</label>
+                        <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description du Foodtruck" rows="10" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="start">Heure d'ouverture du foodtruck</label>
+                        <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="start">Heure de fermeture du foodtruck</label>
+                        <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="place">Lieu du foodtruck</label>
+                        <select class="form-control" id="place" name="place" required>
+                            {%  for place in places %}
+                                <option value="{{ place.id }}">{{ place.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="img">Photo du foodtruck</label>
+                        <input type="file" id="img" name="img" required>
+                        {% include 'imgInfo.html.twig' %}
+                    </div>
+                    <div class="text-center">
+                        <input type="submit" name="submit" class="btn btn-primary" value="Créer">
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="text">Description du foodtruck</label>
-                <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description du Foodtruck" rows="10" required></textarea>
-            </div>
-            <div class="form-group">
-                <label for="start">Heure d'ouverture du foodtruck</label>
-                <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" required>
-            </div>
-            <div class="form-group">
-                <label for="start">Heure de fermeture du foodtruck</label>
-                <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" required>
-            </div>
-            <div class="form-group">
-                <label for="place">Lieu du foodtruck</label>
-                <select class="form-control" id="place" name="place" required>
-                    {%  for place in places %}
-                        <option value="{{ place.id }}">{{ place.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="img">Photo du foodtruck</label>
-                <input type="file" id="img" name="img" required>
-                {% include 'imgInfo.html.twig' %}
-            </div>
-            <div class="text-center">
-                <input type="submit" name="submit" class="btn btn-primary" value="Créer">
-            </div>
-        </form>
+        </div>
         <br />
         <h2 class="text-center">Liste des foodtrucks</h2>
         <hr />
