Tri des artistes

--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -15,6 +15,7 @@
                 {% endif %}
             {% endfor %}
         </div>
+        <hr class="hr">
         <h2 class="text-center white font-circula">Partenaires Institutionnels</h2>
         <div class="row">
             {%  for partner in partners %}
@@ -27,6 +28,7 @@
                 {% endif %}
             {% endfor %}
         </div>
+        <hr class="hr">
         <h2 class="text-center white font-circula">Partenaires Médiatiques</h2>
         <div class="row">
             {%  for partner in partners %}
@@ -39,6 +41,7 @@
                 {% endif %}
             {% endfor %}
         </div>
+        <hr class="hr">
         <h2 class="text-center white font-circula">Partenaires Privés</h2>
         <div class="row">
             {%  for partner in partners %}
