--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -77,7 +77,7 @@
                 {%  for partner in partners %}
                     {% if partner.footer == 1 %}
                         <div class="col-md-4 col-xs-4">
-                            <a href="#" class="thumbnail thumbnail-div">
+                            <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
                                 <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
                             </a>
                         </div>
