--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -8,7 +8,7 @@
             {%  for partner in partners %}
                 {% if partner.type == 'culturel' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="#" class="thumbnail thumbnail-div partnair-logo">
+                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
                             <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
@@ -21,7 +21,7 @@
             {%  for partner in partners %}
                 {% if partner.type == 'institutionnels' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="#" class="thumbnail thumbnail-div partnair-logo">
+                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
                             <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
@@ -34,7 +34,7 @@
             {%  for partner in partners %}
                 {% if partner.type == 'média' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="#" class="thumbnail thumbnail-div partnair-logo">
+                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
                             <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
@@ -47,7 +47,7 @@
             {%  for partner in partners %}
                 {% if partner.type == 'privé' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="#" class="thumbnail thumbnail-div partnair-logo">
+                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
                             <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
