--- a/src/Hph/View/back/programmation.html.twig
+++ b/src/Hph/View/back/programmation.html.twig
@@ -16,6 +16,8 @@
             <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
         {% elseif error==8 %}
             <div class="alert alert-danger" role="alert">Le format d'un des liens est invalide</div>
+        {% elseif error==10 %}
+            <div class="alert alert-danger" role="alert">Les champs requis doivent êtres remplis</div>
         {% endif %}
         <div class="text-center">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#form" aria-expanded="false">Ajouter un artiste</button>
@@ -28,15 +30,15 @@
                 <form method="POST" action="../../../../admin/admin.php?page=addArtist" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="title">Nom de l'artiste</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom de l'artiste">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom de l'artiste" required>
                     </div>
                     <div class="form-group">
                         <label for="text">Description de l'artiste</label>
-                        <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description de l'artiste" rows="10"></textarea>
+                        <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description de l'artiste" rows="10" required></textarea>
                     </div>
                     <div class="form-group">
                         <label for="img">Photo de l'artiste</label>
-                        <input type="file" id="img" name="img">
+                        <input type="file" id="img" name="img" required>
                         {% include 'imgInfo.html.twig' %}
                     </div>
                     <div class="form-group">
